--- a/vignettes/7.1.1 Deposition Conventional.Rmd
+++ b/vignettes/7.1.1 Deposition Conventional.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Deposition Processes"
+title: "7.1.1. Molecular Deposition Processes"
 author: "JQ"
 date: "2023-08-22"
 output: github_document
