--- a/vignettes/7.1.2 Deposition Particulate.Rmd
+++ b/vignettes/7.1.2 Deposition Particulate.Rmd
@@ -1,20 +1,11 @@
 ---
-title: "Particulate Deposition air to soil/water"
+title: "7.1.2 Particulate Deposition air to soil/water"
+author: "Jaap Slootweg, Joris Quik"
 date: "`r Sys.Date()`"
 output: github_document
 editor_options: 
   chunk_output_type: console
 ---
-
-```{r setup}
-# knitr::opts_chunk$set(echo = TRUE)
-# projectRoot <- paste(getwd(), "..", sep = "/")
-# knitr::opts_knit$set(root.dir = NULL) #assuming vignette is in a direct subfolder of the project
-
-
-# knitr::opts_knit$get()
-```
-
 
 ```{r message=FALSE, warning=FALSE, paged.print=FALSE}
 
