--- a/vignettes/7.1.3 sedimentation.Rmd
+++ b/vignettes/7.1.3 sedimentation.Rmd
@@ -1,29 +1,16 @@
 ---
-title: "Sedimentation and deeper"
+title: "7.1.3 Sedimentation from water to sediment"
 output: github_document
 editor_options: 
   chunk_output_type: console
 ---
 
-```{r setup, include=FALSE}
-knitr::knit_meta()
-# knitr::opts_chunk$set(echo = TRUE)
-if (!file.exists("baseScripts/fakeLib.R")){
-projectRoot <- paste(getwd(), "..", sep = "/")
-knitr::opts_knit$set(root.dir = projectRoot) #assuming vignette is in a direct subfolder of the project
-}
-```
-
-# Sedimentation
-
 Sedimentation rate depends on the settling velocity of the particle, which is calculated according the function given below; after the standard initialisation. Note that for Molecular species - all classic substances! - the settling velocity in excel is set at 2.5 m/day. In SB OO this is calculated using Stokes for SPM particle, assuming the not truly dissolved fraction settles at the rate of the SPM particle. TODO Joris?
 
 ```{r initiate, echo=TRUE, message=FALSE, warning=TRUE}
-#script to initialize test environment, including faking a future 'library(sboo)'
-#We will compare to the excel nano version, so we set excelReference before the initialisation
-excelReference <- "data/SimpleBox4.01_20211028.xlsm"
+
 source("baseScripts/initTestWorld.R")
-f_SettlingVelocity
+
 ```
 ## v_functions and f_functions
 SB OO uses functions in different ways. Some functions define the calculation of a state-variable aka landscape-variable. These functions will be passed (by name) to the method NewCalcVariable of a SBcore object, like World. Once a state-variable is calculated is is stored within the SBcore object and can be fetched, and therefore automatically used for process calculation, or for other state-variables. This function for the settlingvelocity is more generic, and will be used more generic than just for the state variable of nano species. Therefor every function that uses f_SettlingVelocity() must provide it with the correct variables.
@@ -34,19 +21,20 @@ A feature of defining functions is that parameters should be atomic. This enable
 For the Molecular species we use the settling rate of the SPM particle. This settling rate ia also needed to assess the build-up of the sediment layer, resuspention and burial. Therefore it is convenient to define it as a variable.
 For Nano materials, the process rate is settling velocity divided by the depth of the layer. Because SettlingVelocity is a regular function ("f_SettlingVelocity") all the parameters for the settling are also needed. See the defining function (sources from newAlgorithmScripts at the moment):
 ```{r}
-source("newAlgorithmScripts/v_SettVellNat.R")
-World$NewCalcVariable("SettVellNat")
-World$CalcVar("SettVellNat")
-source("newAlgorithmScripts/k_Sedimentation.R")
 k_Sedimentation
-```
-Sedimentation is directly to the sediment below. The sedimentation from the seas above deepocean the sedimentation is neglected.
 
-## Resuspension
-The net sedimentation of SPM particles [m/s] is the sedimentation ("SettVellNat") minus the resuspension. The net sedimentation is input to calculate the resuspension. The net sedimentation cannot exceed the sedimentation, this case is caught by the max(,0) function. The other species have equal rate constants.
-```{r}
-source("newAlgorithmScripts/k_Resuspension.R")
-k_Resuspension
+World$fetchData("FRinw")
+World$fetchData("SettlingVelocity")
+World$fetchData("DynViscWaterStandard")
+World$fetchData("VertDistance")
+World$fetchData("RhoCP")
+World$fetchData("RadCP")
+
+
+source("newAlgorithmScripts/k_Sedimentation.R")
+
 ```
-## Adsorption and desorption
+Sedimentation is directly to the sediment below.
+
+
 
