--- a/vignettes/7.2 DiffusionProcesses.Rmd
+++ b/vignettes/7.2 DiffusionProcesses.Rmd
@@ -181,7 +181,7 @@ World$fetchData("SpeciesName")
 World$FromDataAndTo("k_Adsorption")
 testProc <- World$NewProcess("k_Adsorption")
 testProc$execute()
-testProc$execute(debugAt = list(to.SubCompartName = "sea",ScaleName = "Continental"))
+# testProc$execute(debugAt = list(to.SubCompartName = "sea",ScaleName = "Continental"))
 
 World$fetchData("FRorig_spw")
 
@@ -190,13 +190,6 @@ World$fetchData("FRorig_spw")
 World$NewProcess("k_Adsorption")
 World$UpdateKaas("k_Adsorption")
 World$FromDataAndTo("k_Adsorption")
-
-
-# testClass <- World$NewProcess("k_Adsorption")
-# testClass$execute(DebugAt = list())
-# 
-# debugonce(testClass$execute)
-# testClass$execute(DebugAt = list())
 
 
 ```
@@ -238,6 +231,7 @@ World$fetchData("VertDistance")
 World$FromDataAndTo("k_Desorption")
 testProc <- World$NewProcess("k_Desorption")
 testProc$execute()
+ # testProc$execute(debugAt = list(to.SubCompartName = "sea",ScaleName = "Continental"))
 
 ```
 
