--- a/vignettes/5.3-FRACwas.md
+++ b/vignettes/5.3-FRACwas.md
@@ -1,6 +1,7 @@
-Volume FRACtions of phases in subcompartments
+5.3 Volume FRACtions of phases in subcompartments
 ================
-2023-12-04
+Jaap Slootweg, Joris Quik
+2023-12-05
 
 ## Volume fraction of water or air phase in a matrix
 
@@ -193,17 +194,17 @@ calculate a “FRACw” for waters.
 World$fetchData("COL")
 ```
 
-    ##            SubCompart COL
-    ## 3  freshwatersediment 100
-    ## 4        lakesediment 100
-    ## 5      marinesediment 100
-    ## 6    agriculturalsoil 100
-    ## 7         naturalsoil 100
-    ## 8           othersoil 100
-    ## 9           deepocean   1
-    ## 10               lake   1
-    ## 11              river   1
-    ## 12                sea   1
+    ##            SubCompart   COL
+    ## 3  freshwatersediment 0.100
+    ## 4        lakesediment 0.100
+    ## 5      marinesediment 0.100
+    ## 6    agriculturalsoil 0.100
+    ## 7         naturalsoil 0.100
+    ## 8           othersoil 0.100
+    ## 9           deepocean 0.001
+    ## 10               lake 0.001
+    ## 11              river 0.001
+    ## 12                sea 0.001
 
 ``` r
 World$fetchData("SUSP")
