--- a/vignettes/7.3 OtherIntermedia.Rmd
+++ b/vignettes/7.3 OtherIntermedia.Rmd
@@ -39,7 +39,7 @@ source(paste(getwd(),"testScripts/initPartitioningVariables.R", sep="/"))
 
 There is an anomaly in the routes that Erosion takes place. The current implementation in SBoo and in SBexcel is that there is only 1 receiving water compartment (water at Continental Regional and sea at global scales). Where in fact there is at Cont. and Regional scales also lake water and sea water, which might not need to be neglected. \*this is an issue to potentially fix still in SB4 scope. Same holds for Runoff.
 
-```{r}
+```{r message=FALSE, warning=FALSE}
 # data needed for k_Erosion:
 World$fetchData("relevant_depth_s")
 World$fetchData("penetration_depth_s")
@@ -77,7 +77,7 @@ dag <- dagitty::dagitty(paste("dag{", AllNodesAsText, "}"))
 plot(dagitty::graphLayout(dag))
 
 #Replace the (saved) kaas of World
-World$UpdateKaas(mergeExisting = F)
+# World$UpdateKaas(mergeExisting = F)
 
 # World$fetchData("Kscompw")
 
@@ -87,7 +87,7 @@ World$UpdateKaas(mergeExisting = F)
 
 Where a process takes place is usually stored in one of the three process table, which of the three depending on the dimension that is crossed by the process. In this case it's in SubCompartProcesses. Note
 
-```{r}
+```{r message=FALSE, warning=FALSE}
 SubCompartProcesses <- World$fetchData("SubCompartProcesses")
 SubCompartProcesses[SubCompartProcesses$process == "k_Erosion",]
 ```
@@ -114,7 +114,7 @@ How can erosion go to river AND to sea? This is because there is no subcompartme
 
 While we're at it, we can do Runoff in a similar way. Here the formula is: RAINrate \* FRACrun / Ksw \* CORRrunoff / VertDistance So we need Ksw, which can be in the data, or you can apply a formulas depending on the type of substance. See the vignette partitioning.Rmd.
 
-```{r}
+```{r message=FALSE, warning=FALSE}
 World$fetchData("Kscompw")
 World$NewCalcVariable("Runoff")
 World$CalcVar("Runoff" )
@@ -152,7 +152,7 @@ A feature of defining functions is that parameters should be atomic. This enable
 ## The process
 For the Molecular species we use the settling rate of the SPM particle. This settling rate ia also needed to assess the build-up of the sediment layer, resuspention and burial. Therefore it is convenient to define it as a variable.
 For Nano materials, the process rate is settling velocity divided by the depth of the layer. Because SettlingVelocity is a regular function ("f_SettlingVelocity") all the parameters for the settling are also needed. See the defining function (sources from newAlgorithmScripts at the moment):
-```{r}
+```{r message=FALSE, warning=FALSE}
 k_Sedimentation
 
 World$fetchData("FRinw")
@@ -166,7 +166,7 @@ World$fetchData("RadCP")
 Sedimentation is directly to the sediment below.
 
 
-```{r}
+```{r message=FALSE, warning=FALSE}
 World$NewCalcVariable("rho_species")
 World$CalcVar("rho_species" )
 World$NewCalcVariable("rad_species")
@@ -185,25 +185,32 @@ World$fetchData("NumConcNuc")
 World$fetchData("NumConcAcc")
 World$fetchData("Df")
 
+NodeAsText <- paste(World$nodelist$Params, "->" ,World$nodelist$Calc)
+AllNodesAsText <- do.call(paste, c(as.list(NodeAsText), list(sep = ";")))
+dag <- dagitty::dagitty(paste("dag{", AllNodesAsText, "}"))
+plot(dagitty::graphLayout(dag))
 
 World$FromDataAndTo("k_Sedimentation")
 
 test1 <- World$NewProcess("k_Sedimentation")
 test1$execute()
-test1$execute(debugAt = list(SubCompartName = "sea", ScaleName = "Moderate"))
+# test1$execute(debugAt = list(SubCompartName = "sea", ScaleName = "Moderate"))
 
 ```
 
 ## Resuspension
 The net sedimentation of SPM particles [m/s] is the sedimentation minus the resuspension. The net sedimentation is input to calculate the resuspension. The net sedimentation cannot exceed the sedimentation, this case is caught by the max(,0) function. The other species have equal rate constants.
 
-```{r}
+```{r message=FALSE, warning=FALSE}
+
+
 World$FromDataAndTo("k_Resuspension")
 
 World$fetchData("SUSP")
 World$fetchData("NETsedrate")
 test1 <- World$NewProcess("k_Resuspension")
-test1$execute()
+test1$execute() #all are 0, this does not correspond to default in SB, check needed.
 
-# lake sediment missing!
+# test1$execute(debugAt = list(SpeciesName = "Attached"))
+
 ```
