default substance is not a particle, does not have particle characteristics.

--- a/vignettes/9.0 HeteroAglomeration.Rmd
+++ b/vignettes/9.0 HeteroAglomeration.Rmd
@@ -129,6 +129,7 @@ World$fetchData("RadNuc")
 World$fetchData("RadCOL") 
 World$fetchData("RadCP") 
 
+World$fetchData("Substance") 
 
 World$FromDataAndTo("k_HeteroAgglomeration.a")
 testProc <- World$NewProcess("k_HeteroAgglomeration.a")
