--- a/vignettes/Readme.Rmd
+++ b/vignettes/Readme.Rmd
@@ -15,11 +15,11 @@ Please add any new vignette to the overview table below. Indicate in the "Initia
 
 | Vignette                                   | Initial run | Verification | Date       | Related Issue \# |
 |--------------|--------------|--------------|--------------|----------------|
-| 3.0 Characteristics of the compound.Rmd    | done        |              |            |                  |
+| 3.0 Characteristics of the compound.Rmd    | done        | in progress             |            |  #57                |
 | 3.2 Particle Characteristics.Rmd           | done        |              |            |                  |
 | 4.0 partitioning.Rmd                       | done        | done         | 2023-08-25 |                  |
 | 5.0 Characteristics of the Environment.Rmd | done        |              |            |                  |
-| 5.1 Area.Rmd                               | done        |              |            |                  |
+| 5.1 Area.Rmd                               | done        | done             | 2024-01-22           |                  |
 | 5.3 FRACwas.Rmd                            | done        |              |            |                  |
 | 5.4 Advection.Rmd                          |             |              |            |                  |
 | 6.0 Removal.Rmd                            | done        |              |            |                  |
